feat(build): update to Java 25